进行项目配置

--- a/business-infrastructure/pom.xml
+++ b/business-infrastructure/pom.xml
@@ -23,5 +23,17 @@
             <artifactId>business-domain</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- MyBatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis-spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+            <version>8.0.27</version>
+        </dependency>
     </dependencies>
 </project>
