--- a/business-adapter/src/main/resources/application.yml
+++ b/business-adapter/src/main/resources/application.yml
@@ -5,4 +5,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/practice?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8
     username: root
-    password:
+    password: Root@12356
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
