--- a/business-adapter/src/main/resources/application.yml
+++ b/business-adapter/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/practice?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/practice?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowPublicKeyRetrieval=true
     username: root
-    password: Root@12356
+    password: Root@123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
